figuren snel snel in een ander format, geen screenshot

--- a/kinematica/exercises/2dim_oef.tex
+++ b/kinematica/exercises/2dim_oef.tex
@@ -304,27 +304,32 @@ Het juist antwoord is dus (b).
 \end{exercise}
 
 \begin{exercise}
-	Een vliegtuig vliegt met een snelheid van \SI{450}{\kilo\meter\per\hour} op een hoogte van \SI{920}{\meter}.
-	\begin{enumerate}
-		\item Hoever voor het doel moeten de voedselpakketten gelost worden om op het doel terecht te komen?
-		\item Hoeveel tijd hebben de pakketten nodig om het doel te bereiken?
-	\end{enumerate}
-	\begin{oplossing}
-		De afstand waarover de voedselpakketten in horizontale richting zijn vooruit gegaan, kunnen we vinden met de
-		baanvergelijking. We weten namelijk hoever de pakketten naar beneden zijn gevallen en wat hun beginsnelheid is:
-		\begin{eqnarray*}
-			y&=&\frac{g}{2v_0^2}x^2\\
-			&\Downarrow&\\
-			x&=&v_0\sqrt{\frac{2y}{g}}=\SI{1712}{\meter}%1712\rm\,m
-		\end{eqnarray*}
-		De valtijd voor de pakketten vinden we o.a. door naar de verticale valbeweging te kijken. Deze gebeurt onafhankelijk van wat er in de horizontale richting gebeurt, zodat:
-		\begin{eqnarray*}
-			y&=&\frac{1}{2}gt^2\\
-			&\Downarrow&\\
-			t&=&\sqrt{\frac{2y}{g}}=\SI{13,7}{\second}%13,7\rm\,s
-		\end{eqnarray*}
-	\end{oplossing}
+	Een kogel wordt met een snelheid van \SI{800}{\meter\per\second} horizontaal afgeschoten op een doel dat zich op een horizontale afstand van \SI{100}{\meter} bevindt. Over welke afstand is de kogel afgezakt?
 \end{exercise}
+
+% Staat ook in de theorie
+% \begin{exercise}
+% 	Een vliegtuig vliegt met een snelheid van \SI{450}{\kilo\meter\per\hour} op een hoogte van \SI{920}{\meter}.
+% 	\begin{enumerate}
+% 		\item Hoe ver voor het doel moeten de voedselpakketten gelost worden om op het doel terecht te komen?
+% 		\item Hoeveel tijd hebben de pakketten nodig om het doel te bereiken?
+% 	\end{enumerate}
+% 	\begin{oplossing}
+% 		De afstand waarover de voedselpakketten in horizontale richting zijn vooruit gegaan, kunnen we vinden met de
+% 		baanvergelijking. We weten namelijk hoever de pakketten naar beneden zijn gevallen en wat hun beginsnelheid is:
+% 		\begin{eqnarray*}
+% 			y&=&\frac{g}{2v_0^2}x^2\\
+% 			&\Downarrow&\\
+% 			x&=&v_0\sqrt{\frac{2y}{g}}=\SI{1712}{\meter}%1712\rm\,m
+% 		\end{eqnarray*}
+% 		De valtijd voor de pakketten vinden we o.a. door naar de verticale valbeweging te kijken. Deze gebeurt onafhankelijk van wat er in de horizontale richting gebeurt, zodat:
+% 		\begin{eqnarray*}
+% 			y&=&\frac{1}{2}gt^2\\
+% 			&\Downarrow&\\
+% 			t&=&\sqrt{\frac{2y}{g}}=\SI{13,7}{\second}%13,7\rm\,s
+% 		\end{eqnarray*}
+% 	\end{oplossing}
+% \end{exercise}
 
 \begin{exercise}
 	Een vliegwiel doet 450 omwentelingen per minuut. Zoek de hoeksnelheid van het wiel en de snelheid van een punt op \SI{1,70}{\meter} van het middelpunt.
