Updates from Overleaf

--- a/kinematica/2dim_horizontale_worp.tex
+++ b/kinematica/2dim_horizontale_worp.tex
@@ -7,8 +7,6 @@
 	\xmtitle{De horizontale worp}{}
     \xmsource\xmuitleg
 
-Hier een extra zin. 
-
 
 We bekijken een voorbeeld van een tweedimensionale beweging. Wanneer een object horizontaal met een bepaalde beginsnelheid wordt gekatapulteerd, noemen we die beweging een horizontale worp. 
 
@@ -104,7 +102,7 @@ In de beschrijving kunnen we de $x$-as horizontaal en de $y$-as verticaal naar b
 \end{equation*}
 
 
-De baanvergelijking vinden we zoals eerder vermelt, door $t$ in functie van $x$ te schrijven $x=v_0t\Leftrightarrow t=\frac{x}{v_0}$ en dit in $y(t)$ te substitueren:
+De baanvergelijking vinden we zoals eerder vermeld, door $t$ in functie van $x$ te schrijven $x=v_0t\Leftrightarrow t=\frac{x}{v_0}$ en dit in $y(t)$ te substitueren:
 \begin{eqnarray*}
 	y=\frac{1}{2}gt^2=\frac{1}{2}g\left(\frac{x}{v_0}\right)^2=\frac{g}{2v_0^2}x^2
 \end{eqnarray*}
