0837 naar de main  (#161)
* Updates from Overleaf (#158)

overleaf up to date brengen voor review newton vincent

* Updates from Overleaf (#159)

* Hier is de Github Sync message (voor te pullen...?)

--- a/kinematica/2dim_horizontale_worp.tex
+++ b/kinematica/2dim_horizontale_worp.tex
@@ -121,7 +121,7 @@ De baan is dus (een stuk van) een parabool.
 	Een vliegtuig vliegt met een snelheid van \SI{450}{km/h} op een hoogte van \SI{920}{m}.
 	\begin{question} Hoever voor het doel moeten de voedselpakketten gelost worden om op het doel terecht te komen? 
 		\begin{oplossing}  
-			De afstand waarover de voedselpakketten in horizontale richting zijn vooruit gegaan, kunnen we vinden met de baanvergelijking. We weten namelijk hoever de pakketten naar beneden zijn gevallen en wat hun beginsnelheid is:
+			De \textbf{afstand} waarover de voedselpakketten in horizontale richting zijn vooruit gegaan, kunnen we vinden met de baanvergelijking. We weten namelijk hoever de pakketten naar beneden zijn gevallen en wat hun beginsnelheid is:
 			\begin{eqnarray*}
 				y&=&\frac{g}{2v_0^2}x^2\\
 				&\Downarrow&\\
