push vanuit vscode via remote naar overleaf

--- a/dynamica/dynamica_intro.tex
+++ b/dynamica/dynamica_intro.tex
@@ -8,7 +8,7 @@
     \xmsource\xmuitleg
 
 
-HIER EEN PUSH VANUIT OVERELEAF 
+DEZE LIJN VANUIT VSCODE WEG GEDAAN 
 
 
 In de voorgaande hoofdstukken hebben we in de kinematica enkel bewegingen beschreven, door o.a. de fysische grootheden positie, snelheid en versnelling te gebruiken. Nu willen we die bewegingen ook kunnen verklaren; waardoor bewegen voorwerpen en hoe doen ze dat, gegeven de oorzaken? In de dynamica wordt het concept kracht als oorzaak van beweging gegeven en geeft de tweede wet van Newton het verband tussen de kracht de beweging.
