VOORBEELD VINCENT INTRO DYN

--- a/dynamica/dynamica_intro.tex
+++ b/dynamica/dynamica_intro.tex
@@ -14,4 +14,7 @@ De drie beginselen van Newton vormen, samen met enkele krachten, de fundamenten 
 
 We focussen hier op de dynamische uitwerking van een kracht, de statische laten we voornamelijk achterwege. Dat doen we door de lichamen te beschouwen als puntmassa's.
 
+
+VOORBEELD VOOR VINCENT IN dynamica INTRO 
+
 \end{document}
