--- a/xmPreamble.tex
+++ b/xmPreamble.tex
@@ -1414,3 +1414,34 @@ Dit kan gaan over:
 % \input{preamble.tex}
 % \def\adhocpreambleloaded{true}
 % \typeout{Loaded preamble.tex from xmPreamble (\adhocpreambleloaded)}%
+
+
+
+
+
+%  LOGO IN TIKZ 
+
+\tikzset{
+    wiskunde/.pic={
+        \draw (0,0) node[font=\fontfamily{cmr}\selectfont\large] {W}
+        ++(0.2,-0.1) node[font=\fontfamily{cmr}\selectfont\normalsize] {I}
+        ++(0.15,0.04) node[font=\fontfamily{cmr}\selectfont\normalsize] {S}
+        ++(0.23,0.06) node[font=\fontfamily{cmr}\selectfont\large] {K}
+        ++(0.23,0.06) node[font=\fontfamily{cmr}\selectfont\normalsize] {U}
+        ++(0.2,-0.06) node[font=\fontfamily{cmr}\selectfont\small] {N}
+        ++(0.23,0) node[font=\fontfamily{cmr}\selectfont\large] {D}
+        ++(0.24,-0.06) node[font=\fontfamily{cmr}\selectfont\small] {E};
+    },
+    opmaat/.pic={
+        \draw (0,0) node[font=\fontfamily{cmr}\selectfont\large] {O}
+        ++(0.25,-0.1) node[font=\fontfamily{cmr}\selectfont\normalsize] {P}
+        ++(0.3,0.1) node[font=\fontfamily{cmr}\selectfont\large] {M}
+        ++(0.25,0.03) node[font=\fontfamily{cmr}\selectfont\small] {A}
+        ++(0.18,-0.07) node[font=\fontfamily{cmr}\selectfont\large] {A}
+        ++(0.2,0.04) node[font=\fontfamily{cmr}\selectfont\large] {T};
+    },
+    wiskundeopmaat/.pic={
+        \pic at (0,0) {wiskunde};
+        \pic at (0.1,-0.4) {opmaat};
+    }
+}
