--- a/xmPreamble.tex
+++ b/xmPreamble.tex
@@ -1497,3 +1497,6 @@ Dit kan gaan over:
     \FXRegisterAuthor{kwinten}{kwintenopmerking}{\color{magenta}Kwinten} 
     \FXRegisterAuthor{tikz}{tikzopmerking}{\color{green}TIKZ} 
 % ========================================================================
+
+
+\def\linkGithub{https://github.com/kwintenobbels/natuurkunde.opmaat}
