--- a/xmPrintstyle.sty
+++ b/xmPrintstyle.sty
@@ -307,7 +307,7 @@
     \IfFileExists{.shortlog}{%
         % Input file defines \gitcommithash and \gitcontributorslist
         \input{.shortlog}
-        Tot op heden, \gitcommithash, werd dit materiaal mogelijk gemaakt door: 
+        Tot op heden -\gitcommithash - werd dit materiaal mogelijk gemaakt door: 
         
         \begin{itemize}
             \gitcontributorslist
@@ -407,7 +407,7 @@ De licentiegever kan deze toestemming niet intrekken zolang aan de licentievoorw
 
 {\bf Let op:} 
 
-Tikzpictures zijn gelicenseerd onder CC BY-NC 4.0 en zijn ook afzonderlijk beschikbaar via een eigen Github repository. 
+Tikzpictures zijn gelicenseerd onder CC BY-SA 4.0 en zijn ook afzonderlijk beschikbaar via een eigen Github repository. 
 Dit betreft eigen afbeeldingen alsook herwerkingen van diverse bronnen (Tikz.net, LaTeX StackExchange, ...).
 Elke Tikzpicture is van bronvermelding voorzien. 
 
