--- a/dynamica/dynamica_intro.tex
+++ b/dynamica/dynamica_intro.tex
@@ -8,13 +8,11 @@
     \xmsource\xmuitleg
 
 
-In de voorgaande hoofdstukken hebben we in de kinematica enkel bewegingen beschreven, door o.a. de fysische grootheden positie, snelheid en versnelling te gebruiken. Nu willen we die bewegingen ook kunnen verklaren; waardoor bewegen voorwerpen en hoe doen ze dat, gegeven de oorzaken? In de dynamica wordt het concept kracht als oorzaak van beweging gegeven en geeft de tweede wet van Newton het verband tussen de kracht de beweging.
+In de voorgaande hoofdstukken hebben we in de kinematica enkel bewegingen beschreven, door o.a. de fysische grootheden positie, snelheid en versnelling te gebruiken. Nu willen we die bewegingen ook kunnen verklaren; waardoor maken voorwerpen bepaalde bewegingen en hoe doen ze dat, gegeven de oorzaken? In de dynamica wordt het concept kracht als oorzaak van bewegingsverandering gegeven en geeft de tweede wet van Newton het verband tussen de kracht de bewegingsverandering.
 
 De drie beginselen van Newton vormen, samen met enkele krachten, de fundamenten waarop de klassieke mechanica is gebouwd.
 
 We focussen hier op de dynamische uitwerking van een kracht, de statische laten we voornamelijk achterwege. Dat doen we door de lichamen te beschouwen als puntmassa's.
 
-
-VOORBEELD VOOR VINCENT IN dynamica INTRO 
 
 \end{document}
