--- a/dynamica/exercises/denkvragen.tex
+++ b/dynamica/exercises/denkvragen.tex
@@ -17,7 +17,7 @@
 	Waarom is een met boomstammen geladen vrachtwagen voor de bestuurder zo gevaarlijk, als hij bruusk moet remmen, of bij een botsing betrokken raakt?
 
 	\begin{oplossing}
-		De boomstammen willen volgens de eerste wet van Newton tijdens het remmen hun beweging voortzetten.
+		De boomstammen volgen de eerste wet van Newton en zullen zonder voldoende remkracht hun beweging voortzetten (tijdens het bruusk vertragen van de vrachtwagen).
 	\end{oplossing}
 \end{exercise}
 
@@ -42,7 +42,7 @@
 	Op een bierglas ligt een plastic plaat met daarop een appel. Als Els de plaat snel wegtrekt valt de appel in het glas. Bij Lien die de plaat langzaam wegtrekt, niet. Verklaar het verschil tussen beide verschijnselen.
 
 	\begin{oplossing}
-		Als je de plaat snel wegtrekt, is de wrijvingskracht te kortstondig aanwezig om de appel een noemenswaardige versnelling te geven. Trek je traag, dan is de versnelling misschien klein maar is ze lang genoeg aanwezig om de appel een voldoende grote snelheid te geven.
+		Als je de plaat snel wegtrekt, is de kleine wrijvingskracht te kortstondig aanwezig om de appel een noemenswaardige snelheid te geven. Trek je traag, dan is de wrijvingskracht en bijbehorende versnelling misschien klein, maar is ze lang genoeg aanwezig om de appel een voldoende grote snelheid te geven.
 	\end{oplossing}
 \end{exercise}
 
