--- a/dynamica/newton_tweede_wet.tex
+++ b/dynamica/newton_tweede_wet.tex
@@ -8,18 +8,18 @@
 	\xmtitle{De tweede wet van Newton}{}
 %    \xmsource\xmuitleg
 
-De eerste wet vertelt ons niet volledig wat er gebeurt wanneer op een lichaam een kracht werkt. Ze vertelt ons niet wat de relatie tussen kracht en beweging is. Dat doet de tweede wet.
+De eerste wet vertelt ons niet volledig wat er gebeurt wanneer op een lichaam wel een (resulterende) kracht werkt. Ze vertelt enkel dat de snelheid dan niet constant zal zijn, maar ze vertelt ons niet wat de relatie tussen kracht en bewegingsverandering is. Dat doet de tweede wet.
 
-Een bal waar je harder tegen schopt, krijgt een grotere snelheid mee en een pingpongballetje vliegt gemakkelijker weg dan een basketbal wanneer je er een tik tegen geeft. Als je het nader onderzoekt, door bijvoorbeeld verschillende krachten op een wagentje met eventueel steeds andere massa's te laten inwerken en de bijbehorende versnellingen te meten, merk je dat de versnelling recht evenredig is met de resulterende kracht en dat massa en versnelling omgekeerd evenredig zijn. M.a.w. $a\sim F/m$. Als bovendien een kracht zijdelings inwerkt op een bewegend voorwerp, dan merk je dat de baan afbuigt, in de richting van de kracht.
+Een bal waar je harder tegen schopt, krijgt een grotere snelheid mee en een pingpongballetje vliegt gemakkelijker weg dan een basketbal wanneer je er eenzelfde tik tegen geeft. Als je het nader onderzoekt, door bijvoorbeeld verschillende krachten op een wagentje met veranderende massa's te laten inwerken en de bijbehorende versnellingen te meten, merk je dat de versnelling recht evenredig is met de resulterende kracht en dat massa en versnelling omgekeerd evenredig zijn. M.a.w. $a\sim F/m$. Als bovendien een kracht zijdelings inwerkt op een bewegend voorwerp, dan merk je dat de baan afbuigt, in de richting en zin van de kracht.
 
 De eenheid van de grootheid kracht is de newton (symbool N). E\'en newton wordt gedefinieerd als de grootte van de kracht die een massa van \'e\'en kilogram een versnelling van \'e\'en meter per seconde kwadraat geeft.
 
-Bovenstaande observaties, samen met de definitie van de eenheid van kracht, zitten vervat in de tweede wet van Newton, die een kwantitatieve relatie tussen kracht en versnelling poneert.
+Bovenstaande observaties, samen met de definitie van de eenheid van kracht, zitten vervat in de tweede wet van Newton, die een kwantitatieve relatie tussen resulterende kracht en versnelling poneert.
 
 \begin{definition}
 {\textbf{De tweede wet van Newton}} \nl
 
-De versnelling van een voorwerp is recht evenredig met de erop inwerkende resulterende kracht en omgekeerd evenredig met de massa van het voorwerp. In symbolen:
+De versnelling van een voorwerp is recht evenredig met de erop inwerkende resulterende kracht en omgekeerd evenredig met de massa van het voorwerp. De evenredigheidsconstante is gelijk aan 1. In symbolen:
 \begin{equation*}
 \vec{F}=m\vec{a}.
 \end{equation*}
@@ -43,9 +43,9 @@ De versnelling van een voorwerp is recht evenredig met de erop inwerkende result
 	De componentsvergelijkingen zijn in de praktijk handiger, er valt algebra\"isch mee te rekenen.
 \end{remark}
 
-De tweede bewegingswet geeft een verband tussen de oorzaak van een beweging (de resulterende kracht) en de versnelling van de beweging.
+De tweede bewegingswet geeft een verband tussen oorzaak (de resulterende kracht op het voorwerp) en gevolg (de versnelling van het voorwerp).
 
-De formulevorm van de tweede wet ziet er misschien gemakkelijk uit maar is in al haar eenvoud \emph{immens} krachtig. De wetmatigheid verklaart alle mechanische bewegingen; als we de krachten kennen, kennen we de versnelling van het voorwerp en kunnen we (althans op zijn minst in theorie) de baan van het voorwerp bepalen.
+De formulevorm van de tweede wet ziet er misschien gemakkelijk uit, maar is in al haar eenvoud \emph{immens} krachtig. De wetmatigheid verklaart alle mechanische bewegingen; als we de krachten kennen, kennen we de versnelling van het voorwerp en kunnen we (althans op zijn minst in theorie) de baan en bewegingsvergelijkingen van het voorwerp bepalen.
 
 In feite zit de eerste wet vervat in de tweede. Toch blijven we hem gebruiken, vooral om het concept traagheid te benadrukken.
 
@@ -150,7 +150,7 @@ In feite zit de eerste wet vervat in de tweede. Toch blijven we hem gebruiken, v
 	\end{minipage}
 
 	\begin{oplossing}
-	We ontbinden de kracht $\vec{F}$ in zijn twee componenten volgens de horizontale en verticale richting: $\vec{F}_x,\vec{F}_y$. Aangezien het blok in de verticale richting niet versnelt, moet $F_z=F_n+F_y$ of $F_n<F_z$.
+	We ontbinden de kracht $\vec{F}$ in zijn twee componenten volgens de horizontale en verticale richting: $\vec{F}_x,\vec{F}_y$. Aangezien het blok in de verticale richting niet versnelt, moet $F_z=F_n+F_y$ of $F_n<F_z$. Aangezien het blok in de horizontale richting ook niet versnelt, moet $F_x=F_w$ of $F_w<F$.
 	\end{oplossing}
 \end{exercise}
 
