--- a/dynamica/newton_derde_wet.tex
+++ b/dynamica/newton_derde_wet.tex
@@ -29,8 +29,8 @@ Wanneer lichaam A op lichaam B een kracht uitoefent, oefent lichaam B op lichaam
 \end{equation*}
 \end{definition}
 
-\begin{expandable}{remark}{De actie- en reactiekracht zijn altijd even groot.}
-	Het even groot zijn van die krachten is misschien opmerkelijk. Het is toch de appel die naar de aarde valt en niet andersom?! Of, als de kracht die de aarde op de appel uitoefent even groot is als die de appel op de aarde uitoefent, waarom gaan ze dan niet naar mekaar toe? Het antwoord is dat de \emph{uitwerking} van een kracht niet hetzelfde is als de kracht zelf. De massa van de aarde is gigantisch veel groter dan die van de appel zodat die, volgens de tweede wet van Newton, een veel kleinere versnelling krijgt. En het is de versnelling die we zien, niet de kracht.
+\begin{expandable}{remark}{De actie- en reactiekracht zijn altijd even groot, hebben dezelfde richting en tegenstelde zin.}
+	Het even groot zijn van die krachten is misschien opmerkelijk. Het is toch de appel die naar de aarde valt en niet andersom?! Of, als de kracht die de aarde op de appel uitoefent even groot is als die de appel op de aarde uitoefent, waarom gaan ze dan niet naar mekaar toe? Het antwoord is dat de \emph{uitwerking} van een kracht niet hetzelfde is als de kracht zelf. De massa van de aarde is gigantisch veel groter dan die van de appel zodat die, volgens de tweede wet van Newton, een veel kleinere versnelling krijgt. En het is de versnelling die we waarnemen, niet de kracht.
 \end{expandable}
 
 \begin{expandable}{remark}{Van het krachtenpaar grijpen de krachten op verschillende lichamen aan.}
@@ -45,18 +45,18 @@ Wanneer lichaam A op lichaam B een kracht uitoefent, oefent lichaam B op lichaam
 \end{expandable}
 
 \begin{expandable}{remark}{Actie- en reactiekracht zijn niet eenduidig.}
-	Omdat de twee krachten van het krachtenpaar tegelijk optreden, is het in feite niet mogelijk aan te geven wie nu de actiekracht en wie de reactiekracht is.
+	Omdat de twee krachten van het krachtenpaar tegelijk optreden, is het in feite niet mogelijk aan te geven welke nu de actiekracht en welke de reactiekracht is. Het is een kip of het ei vraag, maar gelukkig is ook hier het antwoord niet relevant.
 \end{expandable}
 
 Met deze derde wet kunnen we verschillende verschijnselen verklaren. Hier volgen enkele voorbeelden.
 
-\begin{example}[Hoe kunnen we eigenlijk lopen?] \nl
+\begin{example}[Hoe kunnen we eigenlijk stappen of lopen?] \nl
 	Zo is de wet van actie en reactie van toepassing op wandelen. Wij kunnen vanuit rust in beweging komen door ons af te zetten. Wij oefenen een kracht op de grond uit waarbij deze laatste op zijn beurt een even grote en tegengestelde kracht op ons uitoefent. Zo krijgen wij een versnelling. 
 
 \end{example}
 
 \begin{example}[Hoe stuwt een raket zich voort?]\nl
-	Een vliegtuig met straalmotoren of een raket doen hetzelfde. Door het uitoefenen van een kracht op de naar achter uitgeworpen gassen, oefenen de uitgeworpen gassen een kracht uit op het vliegtuig of de raket. Maar dan voorwaarts. (Een vliegtuig of raket duwt zich dus niet af tegen de (eventuele) lucht.)
+	Een vliegtuig met straalmotoren of een raket doen hetzelfde. Door het uitoefenen van een kracht op de naar achter uitgeworpen gassen, oefenen de uitgeworpen gassen een kracht uit op het vliegtuig of de raket, maar dan voorwaarts. (Een vliegtuig of raket duwt zich dus niet af tegen de (eventuele) stilstaande lucht.)
 \end{example}
 
 \begin{exercise}
@@ -76,7 +76,7 @@ Met deze derde wet kunnen we verschillende verschijnselen verklaren. Hier volgen
 \begin{exercise}
 	Je springt vanuit een roeibootje naar de oever. Verklaar wat er kan gebeuren als het roeibootje niet of wel vastgemeerd is. Wanneer je nu vanaf een groot binnenschip naar de oever springt, wat zou het resultaat dan zijn? Verklaar!
 	\begin{oplossing}
-		Bij een roeibootje dat niet vastgemeerd is, is er veel kans dat je in het water belandt. Bij het afzetten, schiet het bootje namelijk gemakkelijk onder je weg. Hoe komt dat? Wel, doordat je je afzet, oefen je een kracht uit op het bootje. De \textbf{derde wet van Newton} zegt dat het bootje dan een even grote kracht op jou uitoefent, in de tegengestelde richting. Het is die reactiekracht die je zou willen aanwenden om op de oever te geraken. De massa van het bootje is echter zo klein in vergelijking met jouw massa dat, volgens de \textbf{tweede wet van Newton} ($\vec{F}=m\vec{a}$), de versnelling die het bootje krijgt als gevolg van jouw actiekracht veel groter is dan de versnelling die je zelf krijgt door de afzet. In de korte tijd dat je jezelf kan afzetten, verwerft het bootje dus een grote snelheid waardoor het onder je wegschiet en krijg jij geen noemenswaardige snelheid opgebouwd.
+		Bij een roeibootje dat niet vastgemeerd is, is er veel kans dat je in het water belandt. Bij het afzetten, schiet het bootje namelijk gemakkelijk onder je weg. Hoe komt dat? Wel, doordat je je afzet, oefen je een kracht uit op het bootje. De \textbf{derde wet van Newton} zegt dat het bootje dan een even grote kracht op jou uitoefent, in de tegengestelde zin. Het is die reactiekracht die je zou willen aanwenden om op de oever te geraken. De massa van het bootje is echter zo klein in vergelijking met jouw massa dat, volgens de \textbf{tweede wet van Newton} ($\vec{F}=m\vec{a}$), de versnelling die het bootje krijgt als gevolg van jouw actiekracht veel groter is dan de versnelling die je zelf krijgt door de afzet. In de korte tijd dat je jezelf kan afzetten, verwerft het bootje dus een grote snelheid waardoor het onder je wegschiet en krijg jij geen noemenswaardige snelheid opgebouwd.
 
 		Als het bootje is vastgemeerd, lukt het je wel de oever te bereiken. Het bootje kan immers niet wegschieten waardoor je je voldoende lang kan afzetten (er werkt voldoende lang een kracht op jou) en zo de nodige snelheid kan verwerven (je krijgt immers een versnelling) om de sprong te kunnen maken.
 
@@ -97,7 +97,7 @@ Met deze derde wet kunnen we verschillende verschijnselen verklaren. Hier volgen
 	Een eekhoorntje glijdt over een gladde tafel met een heleboel nootjes tussen zijn voorpoten. Wat zou het moeten doen om te verhinderen dat het van de tafel valt? Leg uit.
 	
 	\begin{oplossing}
-		Het eekhoorntje moet de noten \emph{voor} zich uit gooien. De reactiekracht van de kracht die de eekhoorn op de nootjes uitoefent, grijpt aan op de eekhoorn en is tegengesteld gericht. Die reactiekracht kan hem afremmen en hem verhinderen van de tafel te glijden.
+		Het eekhoorntje moet de noten \emph{voor} zich uit gooien, in de zin van de beweging. De reactiekracht van de kracht die de eekhoorn op de nootjes uitoefent, grijpt aan op de eekhoorn en heeft een tegenstelde zin. Die reactiekracht kan hem afremmen en hem verhinderen van de tafel te glijden. Als dit nog niet voldoende zou zijn, kan het eekhoorntje ook zijn nagels in de tafel zetten om af te remmen. De nagels zetten een kracht op de tafel waardoor de tafel een weerstandskracht op de nagels zet.
 	\end{oplossing}
 \end{exercise}
 
