--- a/SPC/semester1.tex
+++ b/SPC/semester1.tex
@@ -58,5 +58,16 @@
 \activitychapter{../kinematica/exercises/2dim_oef.tex}
 % \activitychapter{../kinematica/exercises/2dim_oef_sw} % Staat niet op het leerplan
 
+\part{Dynamica: De wetten van Newton}
+
+\activitychapter{../dynamica/dynamica_intro.tex}
+\activitychapter{../dynamica/newton_eerste_wet.tex}
+\activitychapter{../dynamica/newton_tweede_wet.tex}
+\activitychapter{../dynamica/newton_derde_wet.tex}
+\activitychapter{../dynamica/exercises/oefeningen.tex} 
+\activitysection{../dynamica/exercises/denkvragen.tex}
+\activitysection{../dynamica/exercises/vraagstukken.tex}
+% \activitychapter{6dejaar/nwtn_oplossingsstrategie.tex}
+% \activitychapter{6dejaar/nwtn_historische_uitwijding.tex}
 
 \end{document}
