apparte bestanden voor hoodstuk toepassingen

--- a/dynamica/toep_dynamica_ECB.tex
+++ b/dynamica/toep_dynamica_ECB.tex
@@ -4,7 +4,7 @@
 
 \begin{document}
 	\author{Bart Lambregs}
-	\xmtitle{Dynamica van de ECB}{}
+	\xmtitle{Toepassing: Dynamica van de ECB}{}
     \xmsource\xmuitleg
 
 
