--- a/dynamica/toep_krachten.tex
+++ b/dynamica/toep_krachten.tex
@@ -8,7 +8,7 @@
 	\xmtitle{Verschillende soorten krachten}{}
     \xmsource\xmuitleg
 
-
+% hier blijft enkel de eerste sectie met uitleg over; dit is het origineelDe gravitatiekracht of zwaartekracht (veldkracht)
 
 \section*{Herhaling en uitbreiding soorten krachten}
 
