typo minipages pdf

--- a/dynamica/newton_tweede_wet.tex
+++ b/dynamica/newton_tweede_wet.tex
@@ -69,7 +69,7 @@ In feite zit de eerste wet vervat in de tweede. Toch blijven we hem gebruiken, v
 	\end{minipage}
 	\hfill
 	\begin{minipage}{.15\linewidth}
-	\begin{image}
+	\begin{image}[\linewidth]
 		%  \vspace*{0pt}   % ensure top alignment
 		\includegraphics{FV_9p143}%
 	\end{image}
@@ -88,7 +88,7 @@ In feite zit de eerste wet vervat in de tweede. Toch blijven we hem gebruiken, v
 	\end{minipage}
 	\hfill
 	\begin{minipage}{.2\linewidth}
-	\begin{image}
+	\begin{image}[\linewidth]
 			\includegraphics{istockphoto-1430278348-612x612_theta}%
 	\end{image}
 	\end{minipage}
