--- a/dynamica/toep_dynamica_ECB.tex
+++ b/dynamica/toep_dynamica_ECB.tex
@@ -3,11 +3,35 @@
 %\addPrintStyle{..}
 
 \begin{document}
-	\author{Bart Lambregs}
+	\author{Bart Lambregs, Vincent Gellens}
 	\xmtitle{Dynamica van de ECB}{}
     \xmsource\xmuitleg
 
+Als je een massablok met een touwtje verbindt en vervolgens het blok - met touw in de hand - laat rondslingeren in een ECB, dan merk je dat het touw gespannen staat. Je voelt dat je met je hand (via het touw) een kracht op het blok moet zetten. Deze kracht wijst naar het middelpunt van de cirkelbaan. Zet je die kracht niet meer door het touwtje te lossen, dan vliegt het blok - bij gebrek aan die kracht - uit de cirkelbaan. Dit wijst erop dat (mogelijks) elke cirkelbaan alleen gemaakt kan worden als er een kracht naar het midden van de cirkel aanwezig is.
 
+%\ foto of afbeelding rondslingerende massa aan touw
+
+Wanneer een massa $m$ een eenparige cirkelbeweging maakt, raakt de richtingsveranderende snelheidsvector $\vec{v}$ aan de baan en wijst de versnellingsvector $\vec{a}$ naar het middelpunt van de cirkel. We laten nu de tweede wet van Newton ($\vec{F_r} = m\vec{a}$) hierop los. Aangezien de massa altijd positief is, zegt die uitdrukking dat resulterende kracht en versnelling dezelfde richting en zin moeten hebben. Dus ook zo in een ECB, de resulterende kracht op massa $m$ wijst naar het middelpunt van de cirkel. Als een voorwerp een ECB maakt, is de resulterende kracht een \emph{middelpuntzoekende} of \emph{centripetale kracht}.
+
+%\ afbeelding massa in cirkelbaan met vectoren v, a en Fr
+
+\begin{remark}{De versnelling in een ECB is een normale versnelling. De middelpuntzoekende kracht veroorzaakt die en dus ook de richtingsverandering van de snelheid.}
+\end{remark}
+
+\begin{remark}
+	Wanneer de tweede wet van Newton wordt toegepast op een voorwerp dat een ECB maakt, kunnen we eerdere formules voor de (normale) versnelling in de ECB hanteren:
+\begin{equation}
+    \vec{a}_n=-\omega^2 \vec{r} \qquad 
+	a_n=r\omega^2=v\omega=\frac{v^2}{r}
+\end{equation}
+    
+\end{remark}
+
+\begin{remark} De middelpuntzoekende kracht is geen nieuwe krachtsoort. Het is (de samenstelling van) de werkelijke kracht(en) die op de massa aangrijpen. In het voorbeeld van de rondslingerende massa is de trekkracht de middelpuntzoekende kracht. In andere situaties kan een andere kracht(ensamenstelling) de rol van de middelpunzoekende kracht vervullen. (zie verder voor andere voorbeelden)
+\end{remark}
+
+\begin{remark} Misschien hoorde je ooit over de 'middelpuntvliedende' of 'centrifugale' kracht. Bekeken vanuit onze leefwereld bestaat die kracht in feite niet, het is hooguit een indruk die je hebt wanneer iets of iemand een cirkelbaan of bocht maakt. Je kan hooguit spreken over het \emph{middelpuntvliedend verschijnsel}. Bij gebrek (of verzwakking) van middelpuntzoekende kracht zal het voorwerp uit de oorspronkelijke cirkelbaan vliegen. Het voorwerp komt verder van het middelpunt terecht, maar hier is geen kracht aan het werk! Het is gewoon het traagheidsverschijnsel. Omdat het voorwerp reeds snelheid heeft, zal het voorwerp bij het verdwijnen van middelpuntzoekende (en dus resulterende) kracht een ERB maken. Dat zegt de eerste wet van Newton. Dit gebeurt als het touwtje uit vorig voorbeeld knapt (zie figuur).
+\end{remark}
 
 	%%\newpage
 	
