--- a/SPC/semester1_dev.tex
+++ b/SPC/semester1_dev.tex
@@ -71,17 +71,32 @@
 
 \activitychapter{../dynamica/toep_intro.tex}
 \activitychapter{../dynamica/toep_algemeen.tex}
+
 \activitychapter{../dynamica/toep_krachten.tex}
+\activitysection{../dynamica/toep_krachten_normaalkracht.tex}
+\activitysection{../dynamica/toep_krachten_veerkracht.tex}
+\activitysection{../dynamica/toep_krachten_Archimedeskracht.tex}
+\activitysection{../dynamica/toep_krachten_gravitatie.tex}
+\activitysection{../dynamica/toep_krachten_Coulomb.tex}
+\activitysection{../dynamica/toep_krachten_Lorentz.tex}
+\activitysection{../dynamica/toep_krachten_kernkrachten.tex}
+\activitysection{../dynamica/toep_krachten_wrijving.tex}
+\activitysection{../dynamica/toep_krachten_trekkracht.tex}
+\activitysection{../dynamica/toep_krachten_gewicht.tex}
+
+
+\activitychapter{../dynamica/toep_valversnelling.tex}
 \activitychapter{../dynamica/toep_dynamica_ECB.tex}
+\activitychapter{../dynamica/toep_satellietbanen.tex}
 
 
 \part{De gravitatiekracht}
 
-\activitychapter{../golven/gravitatie_kepler.tex}
-\activitychapter{../golven/gravitatie_universele_gravitatiekracht.tex}
-\activitychapter{../golven/gravitatie_satellietbanen.tex}
-\activitychapter{../golven/gravitatie_gewicht.tex}
-\activitychapter{../golven/gravitatie_zwaartekracht.tex}
+\activitychapter{../dynamica/gravitatie_kepler.tex}
+\activitychapter{../dynamica/gravitatie_universele_gravitatiekracht.tex}
+\activitychapter{../dynamica/gravitatie_satellietbanen.tex}
+\activitychapter{../dynamica/gravitatie_gewicht.tex}
+\activitychapter{../dynamica/gravitatie_zwaartekracht.tex}
 
 \part{Arbeid en Energie}
 
